# handcraft

./: .env.example  .env.sample  .eslintrc.json  .gitignore  Anchor.toml  CLAUDE.md  CURRENT_STATUS.md  INDEXING_IMPLEMENTATION_SUMMARY.md  MODERATION_IMPLEMENTATION.md  README.md  REWARD_ACCOUNTING_IMPLEMENTATION.md  REWARD_ACCOUNTING_QUICKSTART.md  VERSIONS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json
.github/: CONTRIBUTING.md  SECRETS.md
docs/: CONTENT_ARCHITECTURE.md  CONTENT_MANAGEMENT_STRATEGY.md  CONTENT_SYSTEM.md  CONTENT_VIEWERS_AND_UPLOAD_STUDIO_PLAN.md  CURRENT_FEATURES.md  DESIGN_SYSTEM.md  INDEXER_SETUP.md  INDEXING_SYSTEM.md  INFRASTRUCTURE_SCALING.md  MODERATION_SYSTEM_DESIGN.md  REWARD_ACCOUNTING_SYSTEM.md  ROADMAP_PRIORITIES.md  SUBSCRIPTION_SYSTEM.md  environment-setup.md  progression-system-design.md
programs/content-registry/: Cargo.toml  EVENT_EMISSION_GUIDE.md
programs/content-registry/src/: errors.rs  events.rs  lib.rs  utils.rs
programs/content-registry/src/contexts/: bundle.rs  bundle_create_full.rs  bundle_mint.rs  bundle_rent.rs  bundle_rewards.rs  burn.rs  content.rs  ecosystem.rs  ecosystem_subscription.rs  magicblock_mint.rs  mb_bundle_mint.rs  mint.rs  mod.rs  moderation_admin.rs  patron_subscription.rs  profile.rs  rarity_mint.rs  rent.rs  resolve_moderation.rs  rewards.rs  simple_mint.rs  srs_mint.rs  streamflow_membership.rs  submit_report.rs  subscription_burn.rs  subscription_mint.rs  subscription_pools.rs  sync.rs  tip.rs  treasury_unwrap.rs  tribunalcraft_cpi.rs  update_metadata.rs  vote_on_report.rs
programs/content-registry/src/state/: bundle.rs  cid_registry.rs  collection.rs  content.rs  ecosystem_config.rs  item_common.rs  mint_config.rs  mod.rs  moderation.rs  profile.rs  rarity.rs  rent.rs  reward_pool.rs  subscription.rs
(+445 files in other folders)
