[package]
name = "content-registry"
version = "0.1.0"
description = "Handcraft on-chain content registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "content_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
spl-token = "4.0"
