[package]
name = "content-registry"
version = "0.1.0"
description = "Handcraft on-chain content registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "content_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
spl-token = { version = "4.0", default-features = false, features = ["no-entrypoint"] }
mpl-core = "0.11.1"
solana-sha256-hasher = "2.1"
